create new folder dev

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,15 @@
-target/
-pom.xml.tag
-pom.xml.releaseBackup
-pom.xml.versionsBackup
-pom.xml.next
-release.properties
-dependency-reduced-pom.xml
-buildNumber.properties
-.mvn/timing.properties
+dev/target/
+dev/pom.xml.tag
+dev/pom.xml.releaseBackup
+dev/pom.xml.versionsBackup
+dev/pom.xml.next
+dev/release.properties
+dev/dependency-reduced-pom.xml
+dev/buildNumber.properties
+dev/.mvn/timing.properties
 # https://github.com/takari/maven-wrapper#usage-without-binary-jar
-.mvn/wrapper/maven-wrapper.jar
-.classpath
-.project
-/.settings
-*.log
+dev/.mvn/wrapper/maven-wrapper.jar
+dev/.classpath
+dev/.project
+dev/.settings
+dev/*.log
